# xearthlayer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  version.json
xearthlayer/: Cargo.toml
xearthlayer-cli/: Cargo.toml
xearthlayer-cli/src/: error.rs  main.rs  tui_app.rs
xearthlayer-cli/src/commands/: cache.rs  common.rs  config.rs  download.rs  init.rs  mod.rs  patches.rs  run.rs  scenery_index.rs  start.rs
xearthlayer-cli/src/ui/: dashboard.rs  mod.rs
xearthlayer-cli/tests/: publish_workflow.rs
xearthlayer/src/: lib.rs  logging.rs  panic.rs
xearthlayer/src/aircraft_position/: aggregator.rs  flight_path.rs  logger.rs  mod.rs  model.rs  provider.rs  state.rs
xearthlayer/src/airport/: mod.rs  types.rs
xearthlayer/src/app/: bootstrap.rs  config.rs  error.rs  mod.rs
xearthlayer/src/cache/: config.rs  disk_eviction.rs  memory.rs  mod.rs  path.rs  service.rs  traits.rs
xearthlayer/src/config/: defaults.rs  file.rs  keys.rs  mod.rs  parser.rs  settings.rs  upgrade.rs  writer.rs  xplane.rs
xearthlayer/src/coord/: mod.rs  types.rs
xearthlayer/src/dds/: compressor.rs  encoder.rs  gpu_channel.rs  mipmap.rs  mod.rs
xearthlayer/src/debug_map/: activity.rs  api.rs  html.rs  map.html  mod.rs  server.rs  state.rs
xearthlayer/src/diagnostics/: mod.rs  report.rs
xearthlayer/src/executor/: chunk_results.rs  client.rs  context.rs  daemon.rs  download_config.rs  executor.rs  handle.rs  job.rs  mod.rs  policy.rs  queue.rs  resource_pool.rs  task.rs  telemetry.rs  traits.rs
xearthlayer/src/fuse/: filename.rs  filesystem.rs  (+3 more)
xearthlayer/tests/: aircraft_position_integration.rs  gpu_pipeline_stress.rs  scene_tracker_integration.rs
(+377 files in other folders)
