[package]
name = "xearthlayer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "xearthlayer"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25"

[dev-dependencies]
proptest = "1.4"
